2007-12-21  Satoshi Nakagawa <artension@gmail.com>

	Moved ISupportInfo into a separated file.

2007-12-20  Satoshi Nakagawa <artension@gmail.com>

	Added "Message scrollback" option.

2007-12-20  Satoshi Nakagawa <artension@gmail.com>

	Improved to avoid nick changing loop when a nick collision occurred.

2007-12-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to parse RPL_ISUPPORT(005).
	Changed to use nickname length and modes count in the ISupportInfo.

2007-12-19  Satoshi Nakagawa <artension@gmail.com>

	Decreased the font size of the member list and the server tree in "Deep Ocean" theme.

==== LimeChat 0.14.1 ====

2007-12-19  Satoshi Nakagawa <artension@gmail.com>

	Added a workaround for old WebKit.

2007-12-19  Satoshi Nakagawa <artension@gmail.com>

	Improved the logic of weights for nick completions.

2007-12-19  Satoshi Nakagawa <artension@gmail.com>

	Cut off old workarounds.

==== LimeChat 0.14 ====

2007-12-18  Satoshi Nakagawa <artension@gmail.com>

	Tweaked around initialization.

2007-12-18  Satoshi Nakagawa <artension@gmail.com>

	Fixed a name error when received a kill command.

2007-12-18  Satoshi Nakagawa <artension@gmail.com>

	Added nickname format settings in a theme.
	Added "Override nickname format" option on the preferences dialog.

2007-12-17  Satoshi Nakagawa <artension@gmail.com>

	Improved message classes for better message handling.

2007-12-17  Satoshi Nakagawa <artension@gmail.com>

	Improved log rendering performance.
	Changed max lines of log views to 300.

2007-12-17  Satoshi Nakagawa <artension@gmail.com>

	Improved SACrashReporter to ignore SignalException.
	Removed a dataSource reference from a combo box on the preferences dialog.

2007-12-17  Satoshi Nakagawa <artension@gmail.com>

	Added @nick style conversation tracking for the nick completion.
	Removed unnecessary files.

2007-12-16  Satoshi Nakagawa <artension@gmail.com>

	Changed to apply the nickname format setting to Growl notifications.
