@@ -2,17 +2,19 @@
 # You can redistribute it and/or modify it under the Ruby's license or the GPL2.
 
 class ISupportInfo
+  attr_reader :mode
+  
   def initialize
+    @mode = ModeInfo.new
     reset
   end
   
   def reset
     @features = {
-      :chanmodes => 'beIR,k,l,imnpstaqr'.split(','),
       :channeltypes => '#&!+',
-      :modes => 3,
       :nicklen => 9,
     }
+    @mode.reset
   end
   
   def [](key)
@@ -24,7 +26,7 @@ class ISupportInfo
   end
   
   def modes_count
-    @features[:modes]
+    @mode.count
   end
   
   def update(s)
@@ -38,8 +40,9 @@ class ISupportInfo
     if s =~ /\A([-_a-zA-Z0-9]+)=(.*)\z/
       key, value = $1.downcase.to_sym, $2
       case key
-      when :chanmodes
-        @features[key] = value.split(',', 4)
+      when :chanmodes; @mode.parse_chanmodes(value)
+      when :modes; @mode.parse_modes(value)
+      when :prefix; @mode.parse_prefix(value)
       else
         value = value.to_i if value =~ /\A\d+\z/
         @features[key] = value
@@ -48,4 +51,84 @@ class ISupportInfo
       @features[s.downcase.to_sym] = true
     end
   end
+  
+  
+  class ModeInfo
+    attr_reader :count
+    
+    def initialize
+      reset
+    end
+    
+    def reset
+      parse_modes('3')
+      parse_prefix('(ov)@+')
+      parse_chanmodes('beIR,k,l,imnpstaqr')
+    end
+  
+    def parse_modestr(modestr)
+      str = modestr.dup
+      ary = []
+      plus = false
+      until str.empty?
+        token = str.token!
+        if /^([-+])(.+)$/ =~ token
+          plus = ($1 == '+')
+          token = $2
+          token.each_char do |char|
+            c = char.to_sym
+            case c
+            when :-; plus = false
+            when :+; plus = true
+            else
+              if has_param?(c, plus)
+                ary << {:mode => c, :plus => plus, :param => str.token!}
+              else
+                ary << {:mode => c, :plus => plus}
+              end
+            end
+          end
+        end
+      end
+      ary
+    end
+    
+    def ops
+      @ops
+    end
+    
+    def modes_of_type(n)
+      @modes[n] || ''
+    end
+    
+    def has_param?(c, plus)
+      return true if @opmap[c]
+      case @modemap[c]
+      when 0; true
+      when 1; true
+      when 2; plus
+      else; false
+      end
+    end
+    
+    def parse_modes(s)
+      @count = s.to_i
+    end
+    
+    def parse_prefix(s)
+      if s =~ /\A\(([^()]+)\)([^()]+)\z/
+        @ops, marks = $1, $2
+        @opmap = @ops.scan(/./).zip(marks.scan(/./)).inject({}) {|v,i| v[i[0].to_sym] = i[1]; v}
+      end
+    end
+    
+    def parse_chanmodes(s)
+      @modemap = {}
+      @modes = s.split(',', 4)
+      @modes.each_with_index do |i,n|
+        i.scan(/./).each {|s| @modemap[s.to_sym] = n}
+      end
+    end
+  end
+  
 end
